Trying to solve the layout issue highlighted with the plum background

--- a/CSS/rooms.css
+++ b/CSS/rooms.css
@@ -20,8 +20,10 @@
   background-color: #fff;
   width: 330px;
   height: 140px;
-  margin-bottom: 15px;
+  margin: 15px auto;
   border-radius: 20px 20px 20px 20px;
+   
+
 }
 
 .popular-hotel-card:last-child {
@@ -62,7 +64,7 @@
   background-color: #fff;
   width: 330px;
   height: 195px;
-  margin-bottom: 2rem;
+  margin: 2rem auto;
   box-shadow: 0 0 16px #0000002e;
   border-radius: 20px;
 }
@@ -96,19 +98,22 @@ figcaption {
 }
 
 .hotel-grade-colour {
-  color: grey;
+  color: #f2f2f2;
 }
 
 /* Screens between 600px and 1023px */
 
 @media only screen and (min-width: 600px) {
+  .logo {
+    padding-left: 2rem;
+  }
   .popular-hotel-card {
     margin: 0 auto;
     margin-bottom: 2rem;
   }
 
   .hotel-card {
-    margin: 0 auto;
+    /* margin: 0 auto; */
     margin-bottom: 1rem;
   }
 
@@ -124,4 +129,24 @@ figcaption {
 
 /* Desktop*/
 @media only screen and (min-width: 1024px) {
+
+  
+
+  .room-container {
+    display: flex;
+  }
+
+  aside {
+    order: 2;
+  }
+
+  .accommodations {
+    background-color: plum;
+    margin-right: 3rem;
+  }
+
+  .hotel-card {
+    width: 240px;
+    margin: 0;
+  }
 }
